--- a/animaciones.html
+++ b/animaciones.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/imports.css">
+    <link rel="stylesheet" href="css/style.less">
 	<title>Document</title>
 </head>
 <body>
+<div  id="fcss" class="container-fluid pady50 ">
+		<div class="row pady100 pady-200">
+			<h2 class="textoperfil text-center ">"Jorge Robalino diseñando y <br> creando tecnologia desde el 2009"</h2>
+			<h1 class="titulo2 text-center">
+					UX DESIGNER  <br>FRONTEND <br>MARKETING DIGITAL
+			</h1>
+		</div>
+</div>
+
 	<div class="container">
 		<div class="main row ">
 			<div class="col-sm-4 col-xs-12" >
