--- a/animaciones.html
+++ b/animaciones.html
@@ -123,7 +123,7 @@
 
 			<div class="col-sm-4 col-xs-12" >
 				<div class="col-xs-12" id="animation20"></div>
-				<p class="col-xs-12 description">mi texto</p>
+				<p class="col-xs-12 description">mi texta</p>
 				</div>
 
 			<div class="col-sm-4 col-xs-12" >
