--- a/animaciones.html
+++ b/animaciones.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/imports.css">
     <link rel="stylesheet" href="css/style.less">
-	<title>Document</title>
+	<title>Jorge Robalino | Marketing Digital, Ux design</title>
 </head>
 <body>
 <div  id="fcss" class="container-fluid pady50 ">
@@ -130,8 +130,57 @@
 				<div class="col-xs-12" id="animation21"></div>
 				<p class="col-xs-12 description">mi texto</p>
 				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation22"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation23"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation24"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
 				
-			
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation25"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation26"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation27"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation28"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation29"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation30"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation31"></div>
+				<p class="col-xs-12 description">mi texto</p>
+				</div>
+
 
 			
 		</div>
