--- a/animaciones.html
+++ b/animaciones.html
@@ -195,6 +195,37 @@
 				<p class="col-xs-12 description">id="animation31"</p>
 				</div>
 
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation32"></div>
+				<p class="col-xs-12 description">id="animation32"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation33"></div>
+				<p class="col-xs-12 description">id="animation33"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation34"></div>
+				<p class="col-xs-12 description">id="animation34"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation35"></div>
+				<p class="col-xs-12 description">id="animation35"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation36"></div>
+				<p class="col-xs-12 description">id="animation36"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation37"></div>
+				<p class="col-xs-12 description">id="animation37"</p>
+				</div>
+
+
 
 			
 		</div>
