--- a/animaciones.html
+++ b/animaciones.html
@@ -226,6 +226,30 @@
 				</div>
 
 
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation38"></div>
+				<p class="col-xs-12 description">id="animation38"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation39"></div>
+				<p class="col-xs-12 description">id="animation39"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation40"></div>
+				<p class="col-xs-12 description">id="animation40"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation41"></div>
+				<p class="col-xs-12 description">id="animation41"</p>
+				</div>
+
+			<div class="col-sm-4 col-xs-12" >
+				<div class="col-xs-12" id="animation42"></div>
+				<p class="col-xs-12 description">id="animation42"</p>
+				</div>
 
 			
 		</div>
