subir avanze redes sociales

--- a/animaciones.html
+++ b/animaciones.html
@@ -256,7 +256,19 @@
 		
 	</div>
 
-	
+<div class="container-fluid c-naranja-4 pady30 pady-30 ">
+	<div class="container">
+			<div class="row no-gutters block1 clearfix">
+				<ul class="  ">
+						<a href="https://www.facebook.com/jorgerobalinovfx/" target="blank"><img src="images/lfa.png" class="redessociales col-sm-offset-4 col-xs-offset-3 col-sm-1 col-xs-2" alt=""></a>
+						<a href="https://www.twitter.com/jorgejrartd" target="blank"><img src="images/ltw.png" class="redessociales col-sm-1 col-xs-2" alt=""></a>
+						<a href=""><img src="images/lgo.png" class="redessociales col-sm-1 col-xs-2" alt=""></a>
+					</ul>
+				</div>
+			</div>
+	</div>
+</div>
+
 
 
 
